--- a/views/carousel/index.ejs
+++ b/views/carousel/index.ejs
@@ -64,6 +64,11 @@
                         <a class="nav-link" href="/questionnaire/graph">Statistics</a>
                     </li>
 
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/games">Games</a>
+                    </li>
+
                     <% if(!currentUser) { %>
 
                         <li class="nav-item">
