--- a/views/fightingcovid/graph.ejs
+++ b/views/fightingcovid/graph.ejs
@@ -51,11 +51,11 @@
 
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="/">Covid-Free</a>
+            <a class="navbar-brand" href="/">Be (+)ve</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+  <span class="navbar-toggler-icon"></span>
+</button>
+            <div class="collapse navbar-collapse container" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
@@ -66,6 +66,11 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="/questionnaire/graph">Statistics</a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/games">Games</a>
                     </li>
 
                     <% if(!currentUser) { %>
@@ -87,6 +92,7 @@
             </div>
         </nav>
     </header>
+
 
 
 
