--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -21,10 +21,10 @@
 
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="/">Covid-Free</a>
+            <a class="navbar-brand" href="/">Be (+)ve</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
+  <span class="navbar-toggler-icon"></span>
+</button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -36,6 +36,11 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="/questionnaire/graph">Statistics</a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/games">Games</a>
                     </li>
 
                     <% if(!currentUser) { %>
@@ -57,6 +62,7 @@
             </div>
         </nav>
     </header>
+
     <div class="row container">
         <div class="col-md-6 offset-md-3">
             <h1>Register</h1>
