--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,13 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="/">Covid-Free</a>
+            <a class="navbar-brand" href="/">Be (+)ve</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <span class="navbar-toggler-icon"></span>
+</button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <br>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
@@ -28,6 +27,11 @@
 
                     <li class="nav-item">
                         <a class="nav-link" href="/questionnaire/graph">Statistics</a>
+                    </li>
+
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/games">Games</a>
                     </li>
 
                     <% if(!currentUser) { %>
@@ -49,6 +53,7 @@
             </div>
         </nav>
     </header>
+
     <div class="row container">
         <div class="col-md-6 offset-md-3">
             <h1>Login</h1>
